# phone

./: meta.yaml  phone.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  phone.hs
test/: Spec.hs
