name:                phone
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/phone#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

description:         Please see the README on Github at <https://github.com/githubuser/phone#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Phone
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable phone-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , phone
  default-language:    Haskell2010


test-suite phone-test-quickCheck
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  ghc-options:        -threaded
  main-is:            Spec.hs
  build-depends:      base >4 && <5, phone,  QuickCheck
  HS-Source-Dirs:     test

test-suite phone-test-driver
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  ghc-options:        -threaded
  main-is:            doctest-driver.hs
  build-depends:      base >4 && <5, phone, doctest, doctest-discover
  HS-Source-Dirs:     test

source-repository head
  type:     git
  location: https://github.com/taras2k/phone
